test: using mockito-kotlin for tests now for better null-safe arguments